# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2007 OTRS GmbH, http://otrs.org/
# --
# $Id: CHANGES,v 1.528 2007-12-27 17:30:31 martin Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (GPL). If you
# did not receive this file, see http://www.gnu.org/licenses/gpl.txt.
# --

CVS HEAD (????/??/??)
 - (2007/12/27) Fixed bug# 2596 - Problems to download file from
    Action=AdminPackageManager with IE and Safari.
 - (2007/12/27) Improved way how to reset a password. Added password reset
    via token (email which needs to be accepted by new password requester
    first).
 - (2007/12/21) Added possiblity to use options of StringClean() in GetParam()
    and GetArray() functions.
 - (2007/12/21) Add StringClean() function to improve quality of strings.
 - (2007/12/19) Improved installer description to prevent bugs like bug# 2492.
 - (2007/12/17) Fixed bug# 2586 - File download of package in
    AdminPackageManager is not delivering the whole file name anymore.
 - (2007/12/17) Fixed bug# 2539 - SMIME signing was broken for private keys that
    have no passphrase and when openssl is unable to write to random state file.
 - (2007/12/11) Fixed bug# 2479 - Unable to retrieve attachments bigger than
    3Mb (on Oracle DB). Changed default read size from 4 MB to 40 MB in
    Kernel/System/DB/oracle.pm:

    $Self->{'DB::Attribute'}      = {
        LongTruncOk => 1,
        LongReadLen => 40 * 1024 * 1024,
    };

 - (2007/12/10) Updated MIME::Tools to current CPAN version 5.425.
 - (2007/12/06) Fixed bug# 2568 - Problems with attachement downloads if the
    active element filter is enabled.
 - (2007/12/05) Fixed bug# 1399 - Missing Translation. Added some translation to
    customer interface.
 - (2007/12/04) Fixed bug# 2257 - Silent ignorance of SMTP / Sendmail errors,
    now we collect the error and log it (which in turn displays it to the user).