@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2007 OTRS GmbH, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.528 2007-12-27 17:30:31 martin Exp $
+# $Id: CHANGES,v 1.529 2007-12-29 00:44:14 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
@@ -10,6 +10,13 @@
 # --
 
 CVS HEAD (????/??/??)
+ - (2007/12/28) Improved config file mechanism of SysConfig to improve
+    speed in mod_perl is used (about 0.2%-4% speed improvement, depends
+    on shown site).
+    Note: Kernel/Config/Files/ZZZAuto.pm and Kernel/Config/Files/ZZZAAuto.pm
+    generated by OTRS 2.3 or higher is not longer compat. to OTRS 2.2 and
+    lower. But OTRS 2.3 or higher can read config files from OTRS 2.2 and
+    lower.
  - (2007/12/27) Fixed bug# 2596 - Problems to download file from
     Action=AdminPackageManager with IE and Safari.
  - (2007/12/27) Improved way how to reset a password. Added password reset
